# claude_sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LIMITATIONS.md  MIGRATION_GUIDE.md  MIGRATION_PLAN.md  MIGRATION_TO_V2.md  README.md  SELF_PROGRAMMING_DEMO.md  SESSION_API_PARITY.md  TODO.md  check_depth.py  check_depth2.py  self_improve.py  test_model_config.py  test_model_integration.py  test_project.py  test_project_final.py  test_project_installed.py  test_quick.py  test_wrapper.py
ai_docs/: CLAUDE_SDK_ORCHESTRATION_SPEC.md  GOAL_PYTHON_BINDINGS.md  T1_EXECUTION_ENGINE.md
docs/: ARCHITECTURE_PATTERNS.md  EXECUTION_TROUBLESHOOTING.md  T1_EXECUTION_ENGINE.md  api-reference.md  getting-started.md
exports/: claude_cost_analysis_20250601_204502.json  claude_wrapped_2025.json  claude_wrapped_20250601.json
python/: README.md  pyproject.toml  test_session.jsonl
python/claude_sdk/: __init__.py  agent.py
python/examples/: README.md  claude_sdk_usage.py  debug_session_attrs.py  test_execution_engine.py  test_t1_session_exposure.py
python/tests/: README.md  __init__.py  conftest.py  run_tests.py  test_enhanced_methods.py  test_fixture_analysis.py  test_functions.py  test_integration.py  test_message.py  test_message_tool_fields.py  test_project.py  test_session.py
src/: lib.rs  main.rs
src/conversation/: CLAUDE.md  tree.rs
src/execution/: Claude.md  conversation.rs  environment.rs  executor.rs  mod.rs  observer.rs  recorder.rs  workspace.rs
src/parser/: CLAUDE.md  session.rs
src/python/: Claude.md  classes.rs  exceptions.rs  execution.rs  functions.rs  mod.rs  models.rs  utils.rs
src/types/: Claude.md  enums.rs  message.rs  project.rs  session.rs  tool.rs
src/utils/: CLAUDE.md  discovery.rs  path.rs
tests/: Claude.md  conversation_tools_test.rs  debug_file.rs  execution_unit_test.rs  integration_test.rs  parsing_test.rs  simple_test.rs  snapshot_serialization_test.rs  t1_continue_test.rs  t1_conversation_test.rs  t1_disallow_test.rs  t1_discovery_test.rs  t1_integration_test.rs  t1_observer_test.rs  t1_recording_test.rs  t1_start_continue_api_test.rs  t1_tool_extraction_test.rs  t1_tool_permissions_test.rs  t1_transition_unit_test.rs  tool_extraction_fixture.rs  transition_fixture_test.rs
tests/common/: Claude.md  mod.rs
tests/fixtures/: CLAUDE.md
tests/fixtures/sessions/: CLAUDE.md
tests/fixtures/transitions/: CLAUDE.md
tests/integration/: CLAUDE.md  executor_test.rs  mod.rs
tests/scripts/: update_transition_fixtures.sh
