[project]
name = "claude-sdk"
version = "0.1.0"
description = "Python SDK for Claude Code with Rust core"
authors = [{ name = "Darin Kishore", email = "darinkishore@protonmail.com" }]
requires-python = ">=3.11"
dependencies = []

[tool.maturin]
module-name = "claude_sdk._core"
python-packages = ["claude_sdk"]
features = ["python"]
manifest-path = "../Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
