[project]
name = "claude-sdk"
version = "0.2.0"
description = "High-performance Claude Code SDK with Python bindings"
authors = [{ name = "Darin Kishore", email = "darinkishore@protonmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["claude", "anthropic", "ai", "sdk", "rust", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/darinkishore/claude-sdk-rust"
Repository = "https://github.com/darinkishore/claude-sdk-rust"
Issues = "https://github.com/darinkishore/claude-sdk-rust/issues"
Documentation = "https://github.com/darinkishore/claude-sdk-rust#readme"

[tool.maturin]
module-name = "claude_sdk._core"
python-packages = ["claude_sdk"]
features = ["python"]
manifest-path = "../Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
